08-cosign-verify/08-unsigned-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-app
  namespace: cosign-verify
spec:
  containers:
  - name: app
    image: docker.io/YOUR_DOCKERHUB/cks-demo:latest
