08-cosign-verify/signed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-app
spec:
  containers:
    - name: app
      image: docker.io/YOUR_DOCKERHUB/cks-demo:1.0
