08-cosign-verify/unsigned-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-app
spec:
  containers:
    - name: app
      image: docker.io/YOUR_DOCKERHUB/cks-demo:latest
