08-cosign-verify/06-verify-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: verify-signatures
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - image: "docker.io/chris438/node-k8s-app:latest"
          keyRef:
            name: cosign-pubkey
            namespace: cosign-verify
            key: cosign.pub
          mutateDigest: true
